[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "noshow-iq"
version = "0.1.0"
description = "Appointment no-show prediction API"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "scikit-learn",
    "pandas",
    "pymongo",
    "joblib",
    "imbalanced-learn",
]